# tfjm-discord-bot

./: .gitignore  LICENSE  bot.py  problems  pyproject.toml  shell.nix  tfjm-discord-bot.py  tirages.yaml
data/: jokes
src/: __init__.py  base_tirage.py  constants.py  core.py  errors.py  tfjm_discord_bot.py  utils.py
src/cogs/: __init__.py  dev.py  errors.py  help.py  misc.py  teams.py  tirage_logic.py  tirages.py
