[tool.poetry]
name = "tfjm-discord-bot"
version = "0.1.0"
description = "TFJM² bot for drawing problems"
authors = ["ddorn <diego.dorn@free.fr>"]

[tool.poetry.dependencies]
python = "^3.6"
discord = "^1.0.1"
pyyaml = "^5.0.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
